2005-08-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXButton.c:
	* macosx/tkMacOSXDialog.c: fix warnings.

2005-08-16  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkOldConfig.c (Tk_ConfigureWidget, Tk_ConfigureInfo): 
	(Tk_ConfigureValue, DeleteSpecCacheTable): Keep per-interpreter (and
	hence per-thread) copies of all the Tk_ConfigSpec tables so that
	Tk_Uids do not leak across threads. [Bug 749908]

2005-08-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkCanvLine.c, generic/tkCanvPoly.c, generic/tkCanvText.c: 
	* generic/tkCanvas.c, generic/tkConfig.c, generic/tkFocus.c: 
	* generic/tkFrame.c, generic/tkGrid.c, generic/tkImgPhoto.c: 
	* generic/tkPack.c, generic/tkPanedWindow.c: Don't pass size_t
	arguments to Tcl_GetStringFromObj, even with casting; it's not
	portable to 64-bit systems. [Bug 1252702]

2005-08-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXCarbonEvents.c (new): moved carbon events code into
	* macosx/tkMacOSXHLEvents.c:           new file like on HEAD,
	* macosx/tkMacOSXInit.c (TkpInit):     initialize carbon event handlers
	* macosx/tkMacOSXInt.h:                in TkpInit(), add new source
	* unix/Makefile.in:                    file to Makefile.in.

	* macosx/tkMacOSXCarbonEvents.c (AppEventHandlerProc): handle carbon
	events sent directly to application event target via the general
	TkMacOSXProcessEvent() in the same way as events posted to the event
	loop. Moved existing app event handlers to tkMacOSXWindowEvent.c.
	(TkMacOSXInitCarbonEvents): register our application event handler for
	kEventWindowExpanded events to deal with uncollapsing from the dock.

	* macosx/tkMacOSXEvent.h: made TkMacOSXProcessEvent() non-static, added
	* macosx/tkMacOSXEvent.c: new interp field to TkMacOSXEvent struct for
	                          use by app event handler.

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): retrieve